<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_Up_Page"
    android:background="@drawable/signin_page_background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/sign_up_logo"
            android:contentDescription="@string/todo1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="235dp"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="-15dp"
            app:cardCornerRadius="20dp"
            tools:ignore="TextSizeCheck,VisualLintBounds">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0077b6"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/new_user"
                    android:textColor="@color/blue"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidth="2dp"
                    app:hintTextColor="@color/blue"
                    app:cursorColor="@color/blue"
                    app:boxBackgroundColor="#ffffff"
                    app:helperTextTextColor="@color/black"
                    android:hint="FULL NAME"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Full_Name_edittxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="#546E7A"
                        tools:ignore="VisualLintTextFieldSize"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidth="2dp"
                    app:hintTextColor="@color/blue"
                    app:cursorColor="@color/blue"
                    app:boxBackgroundColor="#ffffff"
                    app:helperTextTextColor="@color/black"
                    android:hint="@string/email"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="#546E7A"
                        tools:ignore="VisualLintTextFieldSize"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    app:boxStrokeColor="@color/blue"
                    app:boxStrokeWidth="2dp"
                    app:hintTextColor="@color/blue"
                    app:cursorColor="@color/blue"
                    app:boxBackgroundColor="#ffffff"
                    android:hint="@string/password"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Password_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="#546E7A"
                        tools:ignore="VisualLintTextFieldSize"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/note_your_password_must_contain_6_letters"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"/>

                <Button
                    android:id="@+id/CreateAccount_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="27dp"
                    android:layout_marginEnd="100dp"
                    android:text="@string/create_account"
                    app:backgroundTint="#023047"
                    android:textColor="#ffffff"
                    app:cornerRadius="10dp"
                    tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="15dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/todo2"/>
                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>