<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/confirm_logout"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30sp"
            android:text="@string/do_you_really_want_to_logout"
            android:textAlignment="center"
            android:textColor="#1d3557"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.084" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.171"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Dialog_Cancelbtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:backgroundTint="#ffffff"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="#023e8a"
                android:textSize="12sp"
                android:textStyle="bold"
                app:strokeColor="#023e8a"
                app:strokeWidth="2dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Dialog_Logoutbtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="#ff0054"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:text="@string/logout"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:textStyle="bold"
                app:strokeColor="#ff0054"
                app:strokeWidth="2dp"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>